--- a/package.json
+++ b/package.json
@@ -15,23 +15,23 @@
     "@types/node": "^7.0.5",
     "@types/ramda": "^0.0.3",
     "@types/yargs": "^6.6.0",
-    "jest": "^18.1.0",
-    "ts-jest": "^18.0.3",
-    "tslint": "^4.4.2",
+    "jest": "^19.0.2",
+    "ts-jest": "^19.0.0",
+    "tslint": "^4.5.1",
     "tslint-config-standard": "^4.0.0",
     "typescript": "next"
   },
   "dependencies": {
-    "@cycle/run": "rc",
+    "@cycle/run": "^1.0.0-rc.9",
     "chalk": "^1.1.3",
-    "cross-spawn": "^5.0.1",
+    "cross-spawn": "^5.1.0",
+    "find-up": "^2.1.0",
     "interpret": "^1.0.1",
-    "npm-path": "^2.0.3",
     "ramda": "^0.23.0",
     "string-argv": "^0.0.2",
     "supports-color": "^3.2.3",
     "tree-kill": "^1.1.0",
-    "tslib": "^1.5.0",
+    "tslib": "^1.6.0",
     "yargs": "^6.6.0"
   },
   "jest": {
